# UA-Extract-purepy

./: README.md  build_wheels.sh  pyproject.toml  requirements.txt
ua_extract/: yaml_loader.py
ua_extract/tests/: test_performance.py
